# Udacity-RoboND-p5-HomeRobot

catkin_ws/src/add_markers/: CMakeLists.txt  package.xml
catkin_ws/src/add_markers/src/: add_markers.cpp
catkin_ws/src/map/: map.pgm  map.yaml  simple_walls.world
catkin_ws/src/pick_objects/: CMakeLists.txt  package.xml
catkin_ws/src/pick_objects/src/: pick_objects.cpp
catkin_ws/src/scripts/: add_markers.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
catkin_ws/src/turtlebot_interactions/turtlebot_rviz_launchers/rviz/: navigation.rviz
catkin_ws/src/turtlebot_simulator/turtlebot_gazebo/config/: custom_costmap_params.yaml
catkin_ws/src/turtlebot_simulator/turtlebot_gazebo/launch/: amcl_demo.launch
